force-app/main/default/objects/Course__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <inlineHelpText>Icon for display on user records when course passed</inlineHelpText>
    <label>Badge</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>