force-app/main/default/objects/Course__c/fields/Bootcamp__c.field-meta.xml
<CustomField>
    <fullName>Bootcamp__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if required for Bootcamp or Onboarding</inlineHelpText>
    <label>Bootcamp</label>
    <type>Checkbox</type>
</CustomField>