force-app/main/default/objects/Course__c/fields/Path__c.field-meta.xml
<CustomField>
    <fullName>Path__c</fullName>
    <inlineHelpText>Enter the path that the course is linked too.  This means that the courses linked to a path would be needed to achieve the requirements.</inlineHelpText>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>