force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Account__c</columns>
    <columns>Path__c</columns>
    <columns>Cost__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>